# aio_rmq_wss_proxy

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.cfg
_testing/: 1.py  public_client_for_testing.py
_testing/public_sample/: PublicAsyncServerHandler.py  PublicClientsController.py  PublicClientsSender.py  PublicRmqConsumer.py  PublicWebsocketService.py  public_websocket_service.py
aio_rmq_wss_proxy/: AioRmqConsumer.py  AsyncServer.py  AsyncServerHandler.py  ClientsController.py  ClientsSender.py  MainServerLoop.py  __init__.py
logger/: ColorFormatter.py  FileFormatter.py  LoggerLoader.py  __init__.py
server/: AioRmqConsumer.py  AsyncServer.py  AsyncServerHandler.py  ClientsController.py  ClientsControllerBase.py  ClientsSender.py  MainServerLoop.py  SecuredWebsocketServerProtocol.py  ServerEventLoop.py  Settings.py  Utils.py  __init__.py
service/: ServerEventLoop.py
ws_service_public/: PublicAsyncServerHandler.py  PublicClientsSender.py  PublicRmqConsumer.py  PublicWebsocketService.py  const.py  public_websocket_service.py
