[metadata]
name = aio_rmq_wss_proxy
version = 0.0.2
author = GagramanyantsA
author_email = arthur_gm@mail.ru
description = Asynchronous Proxy Server From RabbitMQ to WebSocket
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GagramanyantsA/aio_rmq_wss_proxy
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = file: requirements.txt
include_package_data = True